--- a/package.json
+++ b/package.json
@@ -19,6 +19,19 @@
     "tone",
     "sound"
   ],
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "browserify": "^14.4.0",
+    "express": "^4.15.4",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-util": "^3.0.8",
+    "gulp-watch": "^4.3.11",
+    "jsencrypt": "^2.3.1"
+  },
   "author": "Max Hoffmann, Gerald Winter",
   "license": "MIT",
   "bugs": {
